content/media/css/default.css
/* ... */
#blog nav.sitenav .menu > li {
  margin: 0;
}

#blog nav.sitenav .menu > li:not(:last-child):after {
  content: "/";
  margin: 0 .2em;
}

div.blognav {
  margin-top: 2em;
  padding-top: .3em;
  border-top: 1px solid rgb(230,230,230);
}

div.blognav .feedback,
div.blognav .feedback a {
  color: #999;
}

div.blognav .feedback {
  font-style: italic;
}

div.blognav li {
  list-style-type: none;
}

div.blognav .fa-li {
  text-align: left;
  width: 1em;
  margin: 0;
  left: -1.6em;
  top: 0.3em;

}

div.blognav .fa-ul {
  margin: .5em 1.6em;
}

div.blognav,
div.blognav a {
  color: rgb(60,60,60);
}

.article-list .date-threshold,
article .post-time {
  display: block;
  color: #777;
}  

.article-list .date-threshold {
  border-bottom: 1px solid rgb(220,220,220);
}

.article-list .date-threshold {
  font-size: 2em;
}

.article-list article h2 {
  margin-top: 0;
}

.article-list article + article {
  margin-top: 5em;
}

.article-list .date-threshold {
  margin: 4em 0 1.5em 0;
}

.article-list .date-threshold:first-child {
  margin-top: 2em;
}

.article-list article a.readmore {
  color: inherit;
  text-decoration: inherit;
}

article.quote div.content,
#frontpage .quote {
  font-style: italic;
  font-weight: 300;
}

article.quote p.author {
  padding-left: 1.5em;
  margin-top: -.6em;
}

.article-list article.link footer a {
  display: block;
}

.article-list article .post-time {
  margin-top: -1em;
}

.article-list article div.header-image {
  height: 11em;
  background-size: cover;
  overflow: hidden;
  content: "";
}

article {
  margin-top: 0em;
}

article h1 a,
article h2 a {
  color: inherit;
}

article header .post-time {
  font-size: .9em;
}

article h1 {
  margin-bottom: 0;
}

article h1, 
article h2 {
  text-transform: uppercase;
}

article header,
article div.header {
  margin-bottom: 3em;
}

.article-list article header,
.article-list article div.header {
  margin-bottom: inherit;
}

article header a,
article div.header a {
  text-decoration: none;
}

article.quote blockquote {
	border: none;
	padding-left: inherit;
}

article.quote .content p:first-child:before,
#frontpage .article-list .quote a:before {
  content: open-quote;
}

article.quote .content p:last-child:after,
#frontpage .article-list .quote a:after {
  content: close-quote;
}

article .quote .author {
  color: black;
}

article:not(.in-list) footer {
	margin-top: 3em;
}

article footer .links li {
  list-style-type: none;
  margin: 0;
}

article footer,
article footer a {
  color: #aaa;
}

article footer p {
  margin-bottom: .5em;
  margin-top: 0em;
}

article footer .links .fa-li {
  text-align: left;
  width: 1em;
  margin: 0;
  left: -1.6em;
  top: 0.3em;
}

article footer ul.links {
  margin: 1.6em;
  margin-bottom: 3em;
}

/* @end Blog */

/* @group Travel */

#travel article div.header {
  position: relative;
  min-height: 15em;
  background-size: cover;
  display: block;
}

#travel article div.header h2 {
  position: absolute;
  bottom: 0;
  padding: 0 .5em;
}

/* @end */

/* @group Gallery */

#gallery-page nav.sitenav .menuitem,
#gallery-page nav.sitenav .menu .folder:before,
#gallery-page nav.sitenav .menu > li:after {
  color: rgb(200,200,200);	
}

#gallery-page nav.sitenav .logotype,
#gallery-page .grid-container.gallery .meta * {
  color: #444;
}

#gallery-page .grid-container.gallery .imageset {
  margin-bottom: 3em;
}

#gallery-page .slideshow .slide div.image {
  /* Make all images appear the same size. With "contain", the full images are shown, but show shorter or narrower than the slideshow  viewport. This looks odd. All images in a gallery should be the same aspect ratio and the gallery aspect ratio should be adjusted to the images, showing full image regardless of "cover" or "contain" setting. */
  background-size: cover;
  background-repeat: no-repeat;
  background-position: left bottom !important;	
}

  /* @group image frame */
  
  /* Fluid constant aspect ratio scaling frame. Create a frame that spans 100% of it's container (grid, screen, etc)... */
#gallery-page .slideshow {
  width: 100%;
  position: relative;
  display: inline-block;
}

  /* ... but restrict the aspect ratio ... */
  /* padding-top:
  16:9  => 56.25%
  4:5 => 80.0
  5:7 => 71.42
  2:3 => 66.66
  */
  /* controls after comes here to pick up the same height, and it needs to create block for height 100% to work correctly */
#gallery-page .slideshow .controls::after,
#gallery-page .slideshow::after {
  display: block;
  content: '';
  padding-top: 66.66%;
}


  /* @end */

/* position the controls over the slides */
#gallery-page .slideshow .controls {
  position: absolute;
  z-index: 10;
  width: 100%;
  color: #fff;
}

#gallery-page .slideshow .controls button {
  position: absolute;
  display: block;
  width: 50%;
  height: 100%;
  
  opacity:  0;
  text-shadow: 0 0px 4px rgba(0,0,0,.5);
  transition: opacity 0.6s ease-in-out;
}

#gallery-page .slideshow .controls button:hover {
  opacity: 1;
}

#gallery-page .slideshow .controls button.previous {
  left: 0;
  padding-right: 30%;
}

#gallery-page .slideshow .controls button.next {
  right: 0;
  padding-left: 30%;
}

/* hide extra content */

#gallery-page .slideshow .slide .main,
#gallery-page .slideshow .slide .caption {
  display: none;
}

/* @end */

